// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snapshot: JSX className autofix > indented element keeps its indentation 1`] = `
"function C() {
  return (
    <div className="
      flex flex-col items-center justify-center
      px-5 py-15
      text-sm text-neutral-100
    " />
  );
}"
`;

exports[`snapshot: JSX className autofix > long list wraps onto grouped lines 1`] = `
"<div className="
  flex flex-col items-center justify-center
  px-5 py-15
  text-sm text-neutral-100
" />"
`;

exports[`snapshot: JSX className autofix > short list reorders but stays single line 1`] = `"<div className="flex p-4 text-sm" />"`;

exports[`snapshot: JSX className autofix > variants / important / arbitrary preserved, unknown leads 1`] = `"<div className="[mask:url(#x)] custom-thing flex !mt-2 hover:bg-blue-500" />"`;

exports[`snapshot: core grouping > canonical README example 1`] = `
[
  {
    "blocks": [
      {
        "classes": [
          "flex",
          "flex-col",
          "items-center",
          "justify-center",
        ],
        "variant": "",
      },
    ],
    "category": "flexbox-grid",
  },
  {
    "blocks": [
      {
        "classes": [
          "px-5",
          "py-15",
        ],
        "variant": "",
      },
    ],
    "category": "spacing",
  },
  {
    "blocks": [
      {
        "classes": [
          "text-sm",
          "text-neutral-100",
        ],
        "variant": "",
      },
    ],
    "category": "typography",
  },
]
`;

exports[`snapshot: core grouping > many categories 1`] = `
[
  {
    "blocks": [
      {
        "classes": [
          "grid",
          "grid-cols-3",
          "gap-4",
        ],
        "variant": "",
      },
    ],
    "category": "flexbox-grid",
  },
  {
    "blocks": [
      {
        "classes": [
          "w-full",
          "h-screen",
        ],
        "variant": "",
      },
    ],
    "category": "sizing",
  },
  {
    "blocks": [
      {
        "classes": [
          "border",
          "border-gray-200",
        ],
        "variant": "",
      },
    ],
    "category": "borders",
  },
  {
    "blocks": [
      {
        "classes": [
          "transition-colors",
          "duration-300",
        ],
        "variant": "",
      },
    ],
    "category": "transitions-animation",
  },
  {
    "blocks": [
      {
        "classes": [
          "cursor-pointer",
        ],
        "variant": "",
      },
    ],
    "category": "interactivity",
  },
  {
    "blocks": [
      {
        "classes": [
          "fill-current",
        ],
        "variant": "",
      },
    ],
    "category": "svg",
  },
  {
    "blocks": [
      {
        "classes": [
          "sr-only",
        ],
        "variant": "",
      },
    ],
    "category": "accessibility",
  },
]
`;

exports[`snapshot: core grouping > variants, important, arbitrary, unknown, and a duplicate 1`] = `
[
  {
    "blocks": [
      {
        "classes": [
          "custom-thing",
          "[mask:url(#x)]",
        ],
        "variant": "",
      },
    ],
    "category": "unknown",
  },
  {
    "blocks": [
      {
        "classes": [
          "z-10",
        ],
        "variant": "",
      },
    ],
    "category": "layout",
  },
  {
    "blocks": [
      {
        "classes": [
          "p-4",
          "!mt-2",
        ],
        "variant": "",
      },
    ],
    "category": "spacing",
  },
  {
    "blocks": [
      {
        "classes": [
          "text-sm",
        ],
        "variant": "",
      },
    ],
    "category": "typography",
  },
  {
    "blocks": [
      {
        "classes": [
          "bg-red-500",
        ],
        "variant": "",
      },
      {
        "classes": [
          "hover:bg-blue-500",
        ],
        "variant": "hover",
      },
    ],
    "category": "backgrounds",
  },
  {
    "blocks": [
      {
        "classes": [
          "rounded-lg",
        ],
        "variant": "",
      },
    ],
    "category": "borders",
  },
  {
    "blocks": [
      {
        "classes": [
          "shadow-md",
        ],
        "variant": "",
      },
    ],
    "category": "effects",
  },
]
`;
